DDF-3219 Apply codebase reformat